--- a/src/Components/shared/Loader/loading.css
+++ b/src/Components/shared/Loader/loading.css
@@ -1,4 +1,3 @@
-/* From Uiverse.io by KSAplay */ 
 .loader {
     display: flex;
     align-items: center;
@@ -34,7 +33,7 @@
     padding: 5px;
     width: 200px;
     height: var(--height);
-    background-color: #212121 /*change this*/;
+    background-color: #212121 ;
     box-shadow: #0c0c0c -2px 2px 4px 0px inset;
     border-radius: calc(var(--height) / 2);
   }
