feat: enhance Dashboard layout with logo and user profile integration, and improve sidebar structure

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,12 @@
 body{
   font-family: "Nunito", sans-serif;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
